test/scc/expr/semantic-errors/017.a
017.t:4:5: error: expression must have real or pointer-to-object type